# SXEval-C

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic/: main.c  setup.h
include/: context.h  operator.h  sxeval.h
include/sxeval/: context.h  error.h  operator.h  sxeval.h
src/: context.c  error.c  main.cpp  operator.c  sxeval.c
